Final project including footer.

--- a/index.html
+++ b/index.html
@@ -6,49 +6,68 @@
     <link href="./resources/css/styles.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-      <div class ="container">
-        <div class="header">
-          <div class="headingleft">
-            <div class="logo"><img src="./resources/images/img-myt-logo.jpg"></img></div>
-            <div class="logo"><p>My Times</p></div>
-          </div>
-          <nav class="headingright">
-            <ul>
-              <li><span class="linkitem">World</li></span>
-              <li><span class="linkitem">U.S.</li></span>
-              <li><span class="linkitem">Tech</li></span>
-              <li><span class="linkitem">Science</li></span>
-            </ul>
-          </nav>
+    <div class ="container">
+      <div class="header">
+        <div class="headingleft">
+          <div class="logo"><img src="./resources/images/img-myt-logo.jpg"></img></div>
+          <div class="logo"><p>My Times</p></div>
         </div>
+        <nav class="headingright">
+          <ul>
+            <li><span >World</li></span>
+            <li><span >U.S.</li></span>
+            <li><span >Tech</li></span>
+            <li><span >Science</li></span>
+          </ul>
+        </nav>
+      </div>
     </div>
 
     <div class ="container">
       <div class ="spacer">
         <div class="main">
           <div class="column large">
-              <p class ="images">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
-              <p class ="spacing">MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
-              <div class = "smallerarticles">
+            <div class = "mainimg" >
+              <p class ="images" id="main">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
+            </div>
+            <div>
+              <p class ="spacing">MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
+                Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque
+                rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa
+                rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio.
+                Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque.
+                Nullam sit amet fringilla massa.</p>
+            </div>
+            <div class="secondarticles">
+              <div class = "flexible-container">
                 <h2>Orca Spends Vacation at Land World Puget</h2>
-                <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+                <p class ="spacing">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi
+                  pulvinar ante accumsan...</p>
+                <div class="smallerarticle-1 image-text" >
+                  <p class ="images">Earth Spins Backwards for 2017</p>
+                </div>
               </div>
-              <p class ="images">Earth Spins Backwards for 2017</p>
-              <div class = "smallerarticles">
+              <div class = "flexible-container">
                 <h2>Burger for Breakfast: How Early is too Early?</h2>
-                <p>Mew York, MYâInterdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+                <p class ="spacing">Mew York, MYâInterdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim.
+                  Praesent eu nisl erat.</p>
+                <div class="smallerarticle-2 image-text">
+                  <p class ="images">Research Shows Cameras Erase Memory</p>
+                </div>
               </div>
-              <p class ="images">Research Shows Cameras Erase Memory</p>
+            </div>
           </div>
           <div class="column medium">
-            <div class = "smallerarticles">
+            <div class = "flexible-container">
               <h2>FBI Finds Action Star Guilty of False Advertising</h2>
-              <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed.
-                Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris,
+              <p class ="spacing">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis
+                eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris,
                 placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at
                 tincidunt cursus. Vestibulum blandit aliquam felis...</p>
             </div>
-            <p class ="images">Cats in Control-Is It a Thing?</p>
+            <div class="smallerarticle-3 image-text">
+              <p class ="images">Cats in Control-Is It a Thing?</p>
+            </div>
             <div>
               <p class ="spacing">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel
                  neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia
@@ -61,12 +80,42 @@
             </div>
             <div class ="newsbites">
               <h2>NEWS BITES</h2>
-              <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a
-                 Top Secret Way You Can</p>
+              <div class="newsbitescolumns">
+                <p class ="newsbitesitems">Cat Emoji Goes Viral</p>
+                <p class ="newsbitesitems">Buy Youtube Views</p>
+                <p class ="newsbitesitems">Home Business Advertising Ideas</p>
+                <p class ="newsbitesitems">Advertising Internet Online</p>
+                <p class ="newsbitesitems">Illustration in Marketing Materials</p>
+                <p class ="newsbitesitems">Finally a Top Secret Way You Can</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </body>
+
+  <footer>
+    <div class="footer">
+      <div class="columnfooter">
+        <div class="mytimes">
+          <p class="mytimeswords">My Times</p>
+          <p class="mytimespipe">|</p>
+        </div>
+        <nav class="footerright">
+          <ul>
+            <li><span >World</li></span>
+            <li><span >U.S.</li></span>
+            <li><span >Tech</li></span>
+            <li><span >Science</li></span>
+          </ul>
+        </nav>
+      </div>
+      <div class="columnfooter">
+        <div class="copyright">
+          <p >© 2016, My Times (A Division of Codecademy bite)</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
